--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,8 @@
   <title>Air Conditioner App</title>
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Mountains+of+Christmas:wght@400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=The+Nautigal:wght@400;700&display=swap"
-    rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Mountains+of+Christmas:wght@400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
