--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,17 @@
   <link rel="icon" href="%PUBLIC_URL%/ac-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description"
+    content="Megatech Cooling Services offers top-notch air conditioning installation, repair, and maintenance services in Ghana. We specialize in AC sales, general maintenance, and repair of gas and electric ovens, and refrigerators.  Your trusted partner for all cooling and appliance needs." />
+  <meta name="keywords"
+    content="AC installation, AC repair, air conditioning services, refrigerator repair, oven repair, appliance maintenance, Accra services, cooling services, HVAC, electrical engineering services, electric oven, electric and gas oven, oven repairs, fridge repairs" />
+  <meta property="og:title" content="Megatech Cooling Services - Megatech, cooling time..." />
+  <meta property="og:description"
+    content="Expert AC services, refrigerator repairs, and oven maintenance. Serving Accra with quality and reliability." />
+  <meta property="og:type" content="website" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://www.megatechghana.com/" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/ac-favicon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,8 +34,10 @@
   <title>MegaTech Cooling Services</title>
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Mountains+of+Christmas:wght@400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=The+Nautigal:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Mountains+of+Christmas:wght@400;700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=The+Nautigal:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
